--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^4.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.8",
     "jquery": "^3.1.0",
     "shelljs": "^0.7.1",
     "vinyl-buffer": "^1.0.0",
+    "vinyl-named": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
-    "vue": "^1.0.26"
+    "vue": "^1.0.26",
+    "yargs": "^6.0.0"
   }
 }
