--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vinyl-named": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
     "vue": "^1.0.26",
+    "angular": "1.3.2",
     "yargs": "^6.0.0"
   }
 }
